plugins {
	id 'java'
	id 'application'
	id 'org.openjfx.javafxplugin' version '0.1.0'
	id 'com.gradleup.shadow' version '8.3.5'
	id 'com.github.spotbugs' version '6.0.26'
}

java {
	sourceCompatibility = JavaVersion.VERSION_23
	targetCompatibility = JavaVersion.VERSION_23
}

javafx {
	modules = ['javafx.controls', 'javafx.fxml'] // modify list as needed
	version = '21' // change version as needed
}


repositories {
	mavenCentral()
	maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
	maven { url 'https://jitpack.io' }
	flatDir {
		dirs '.'
	}
}

application {
	mainClass = 'com.gdhchat.client.Main'  // Replace with your main class
}

dependencies {
	implementation 'org.json:json:20240303'
	implementation 'org.openjfx:javafx-controls:21'
	implementation 'org.openjfx:javafx-fxml:21'
	implementation 'org.openjfx:javafx-media:21.0.2'
	implementation 'org.openjfx:javafx-graphics:21'
	implementation 'org.fxmisc.richtext:richtextfx:0.11.3'
	implementation 'org.reactfx:reactfx:2.0-M4'
	implementation 'org.fxmisc.flowless:flowless:0.4.4'
	implementation 'org.fxmisc.undo:undofx:1.1'
	implementation 'org.fxmisc.wellbehaved:wellbehavedfx:0.3.3'
	implementation 'junit:junit:4.13.2'
	implementation 'org.mockito:mockito-core:5.14.2'
	implementation 'org.powermock:powermock-api-mockito2:2.0.9'
	implementation 'org.powermock:powermock-core:2.0.9'
	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
	implementation 'com.github.spotbugs:spotbugs-annotations:4.7.3'
}

clean {
	delete 'bin', 'build'
}

tasks.named('run') {
	jvmArgs = [
			'--module-path',  classpath.asPath,
			'--add-modules', 'javafx.controls, javafx.fxml, javafx.graphics' // Add other JavaFX modules as needed
	]
}

configurations.runtimeClasspath {
	extendsFrom(configurations.compileOnly)
}


tasks.named('shadowJar') {
	mergeServiceFiles()
	manifest {
		attributes 'Main-Class': 'com.gdhchat.client.Main'
	}
}